[package]
name = "airtable_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
csv = "1.2.2"
reqwest = { version = "0.11.20", features = ["blocking"] }
